corrected issue with transparent form on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,7 +406,7 @@ textarea {
 #form {
   padding: 35px;
   margin: 50px 0;
-  background: rgb(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.8);
 }
 
 .submit {
